@@ -1,3 +1,8 @@
+2001-08-15  Alex Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c:
+	Cache user information to avoid many getpwuid calls etc.
+
 2001-08-14  Havoc Pennington  <hp@redhat.com>
 
 	* libnautilus-private/nautilus-thumbnails.c (is_nfs_filesystem):
